fixing modal container text overflow

--- a/Recipe-App/style.css
+++ b/Recipe-App/style.css
@@ -1,15 +1,8 @@
- /* body {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  font-size: 20px;
-  font-family: sans-serif;
- } */
 
 body {
   display: grid;
   font-size: 20px;
-  font-family: sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   grid-template-areas:
       'a b'
       'c c';
@@ -70,22 +63,21 @@ button {
 }
 .modal {
   display: none; 
-  position: relative;
+  position: fixed;
   align-content: center;
-  text-align: center; 
+  /* text-align: center;  */
   z-index: 1;
-  left: 20%;
-  top: 20%;
-  width: 600px;
-  max-width: 100%;
-  height: 400px;
-  max-height: 100%; 
-  overflow: auto; 
+  left: 5%;
+  top: 10%;
+  width: 100%;
+  height: 100%;
+  overflow: hidden; 
   background-color: white; 
 }
 .modal-content {
+  display: block;
   background-color: white;
-  margin: 20% auto; 
+  margin: 5% auto 15% auto; 
   text-align: center;
   padding: 10px;
   border: 4px solid rgb(144, 189, 11);
@@ -108,4 +100,14 @@ button {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+@media screen and (max-width: 300px) {
+  .close {
+    width: 100%;
+  }
+}
+@media (orientation: landscape) {
+  body {
+    flex-direction: row;
+  }
 }
